login worker, but problem in permisions for navigation

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,6 +17,7 @@
 		data-sap-ui-frameOptions="trusted"
 		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport">
 	</script>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 
 	<style>
 		html, body { height: 100%; }
