--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,6 +18,7 @@
 		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport">
 	</script>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="icon" href="images/LogonewInvent.png"/>
 
 	<style>
 		html, body { height: 100%; }
